contact page done for now

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<h1>contact</h1>
+
 <p>You can find me on Github and Twitter, and if neither of those work, you can also get in touch via email.</p>
 
 <div class="contact-links">
