adding syntax highlighting

--- a/contact/index.html
+++ b/contact/index.html
@@ -6,10 +6,10 @@ layout: default
 <p>You can find me on Github and Twitter, and if neither of those work, you can also get in touch via email.</p>
 
 <div class="contact-links">
-    <a href="http://github.com/cmkm">
+    <a href="http://github.com/cmkm" target="_blank">
         <img src="/img/gh.png">cmkm
     </a>
-    <a href="http://twitter.com/cmkmeador">
+    <a href="http://twitter.com/cmkmeador" target="_blank">
         <img src="/img/tw.png">cmkmeador
     </a>
     <a href="mailto:cieara@cmkm.io">
